--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 opencv-python-headless==4.8.1.78
+streamlit==1.30.0
 streamlit-option-menu==0.3.6
 easyocr==1.7.0
-streamlit==1.30.0
-numpy==1.25.2
+numpy==1.26.4
 pandas==2.1.3
-pillow==9.4.0
-
-
+setuptools>=68.0.0
+wheel
