--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-
-streamlit
-opencv-python-headless
-numpy<2.0
-Pillow
-ultralytics
-easyocr
-torch
-torchvision
+streamlit==1.31.0
+opencv-python-headless==4.9.0.80
+numpy==1.24.3
+Pillow==10.2.0
+ultralytics==8.1.24
+easyocr==1.7.1
+torch==2.1.2
+torchvision==0.16.2
