--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.31.0
-opencv-python-headless==4.9.0.80
-numpy==1.24.3
-Pillow==10.2.0
-ultralytics==8.1.24
-easyocr==1.7.1
-torch==2.1.2
-torchvision==0.16.2
+streamlit
+opencv-python-headless
+numpy
+Pillow
+ultralytics
+easyocr
+torch
+torchvision
